Add week 2026-02-16 report, archive folder, and flexible KDP file matching
- Relax KDP glob in run-report.sh to accept any KDP_Dash* filename
- Add data/archive/ with .gitkeep for old report storage
- New ASIN title lookups from this week's search terms

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # --- Data files ---
 data/raw/*
 data/processed/*
+data/archive/*
 !data/raw/.gitkeep
 !data/processed/.gitkeep
+!data/archive/.gitkeep
 
 # Safety net — no XLSX/CSV data committed accidentally
 *.xlsx
